<resources>
    <string name="app_name">PrimeTube</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="tittle_library">Library</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password</string>
    <string name="Username">Usernames</string>
    <string name="Password">Password</string>
    <string name="or">Or</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="rest">Rest</string>
    <string name="live">Live</string>
    <string name="search">Search</string>
</resources>
