<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.Title.LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/backgroundd" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:ems="10"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#2196F3"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/tvForgetpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:clickable="true"
            android:text="@string/forget_password"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/sign_up" />


    </LinearLayout>
</layout>