<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.primetube.ui.home.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.primetube.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.primetube.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications" />
    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.primetube.ui.Library.Library"
        android:label="@string/tittle_library" />
    <fragment
        android:id="@+id/navigation_live"
        android:name="com.example.primetube.ui.live.LiveFragment"
        android:label="Live"
        tools:layout="@layout/live_fragment" />
    <fragment
        android:id="@+id/errorFragment"
        android:name="com.example.primetube.ui.home.ErrorFragment"
        android:label="fragment_error"
        tools:layout="@layout/fragment_error" />
    <fragment
        android:id="@+id/playerFragment"
        android:name="com.example.primetube.ui.player.PlayerFragment"
        android:label="player_fragment"
        tools:layout="@layout/player_fragment" />
</navigation>