<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etconfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="confirm Password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <EditText
                android:id="@+id/edlastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="Last Name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/edfirstname"
                app:layout_constraintStart_toStartOf="@+id/edfirstname"
                app:layout_constraintTop_toBottomOf="@+id/edfirstname" />

            <EditText
                android:id="@+id/edfirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="First Name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/Username"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/edlastname"
                app:layout_constraintStart_toStartOf="@+id/edlastname"
                app:layout_constraintTop_toBottomOf="@+id/edlastname" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailSubject"
                app:layout_constraintEnd_toEndOf="@+id/edUsername"
                app:layout_constraintStart_toStartOf="@+id/edUsername"
                app:layout_constraintTop_toBottomOf="@+id/edUsername" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/etEmail"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <Button
                android:id="@+id/btnSingup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#4CAF50"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="@+id/etconfirmPassword"
                app:layout_constraintStart_toStartOf="@+id/etconfirmPassword"
                app:layout_constraintTop_toBottomOf="@+id/etconfirmPassword" />

            <ProgressBar
                android:id="@+id/loadingpb"
                style="?android:attr/progressBarStyle"
                android:layout_width="52dp"
                android:layout_height="57dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSingup"
                app:layout_constraintVertical_bias="0.324" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>
</layout>